docs: 更新使用自建 client 进行测试;